--- a/backend/package.json
+++ b/backend/package.json
@@ -11,30 +11,37 @@
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --write src/**/*.ts"
   },
-  "keywords": ["time-tracker", "api", "fastify", "mongodb"],
+  "keywords": [
+    "time-tracker",
+    "api",
+    "fastify",
+    "mongodb"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "fastify": "^4.24.3",
-    "mongoose": "^8.0.3",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "zod": "^3.22.4",
-    "dotenv": "^16.3.1",
     "@fastify/cors": "^8.4.0",
-    "@fastify/jwt": "^7.2.4",
     "@fastify/helmet": "^11.1.1",
-    "@fastify/rate-limit": "^9.0.1"
+    "@fastify/jwt": "^7.2.4",
+    "@fastify/rate-limit": "^9.0.1",
+    "@fastify/swagger": "^8.12.0",
+    "@fastify/swagger-ui": "^2.0.0",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
+    "fastify": "^4.24.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.9.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
-    "typescript": "^5.2.2",
-    "tsx": "^4.1.4",
-    "eslint": "^8.52.0",
+    "@types/node": "^20.9.0",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
-    "prettier": "^3.0.3"
+    "eslint": "^8.52.0",
+    "prettier": "^3.0.3",
+    "tsx": "^4.1.4",
+    "typescript": "^5.2.2"
   }
 }
