--- a/backend/env.example
+++ b/backend/env.example
@@ -2,8 +2,16 @@
 # Copy this file to .env and fill in your values
 
 # Database Configuration
+# Local MongoDB (when running outside Docker):
+# MONGODB_URI=mongodb://localhost:27017/time-tracker
+# Local MongoDB (when running in Docker):
+# MONGODB_URI=mongodb://admin:password@mongodb:27017/time-tracker?authSource=admin
+# MongoDB Atlas (Cloud):
+# MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/time-tracker?retryWrites=true&w=majority
+# 
+# To use Atlas, replace the connection string above with your Atlas connection string.
+# Get your connection string from: https://cloud.mongodb.com -> Database -> Connect -> Connect your application
 MONGODB_URI=mongodb://localhost:27017/time-tracker
-# For MongoDB Atlas, use: mongodb+srv://username:password@cluster.mongodb.net/time-tracker
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-here
