--- a/docker/env.example
+++ b/docker/env.example
@@ -2,8 +2,14 @@
 # Copy this file to .env and fill in your values
 
 # Database Configuration
-MONGODB_URI=mongodb://localhost:27017/time-tracker
-# For MongoDB Atlas, use: mongodb+srv://username:password@cluster.mongodb.net/time-tracker
+# Local MongoDB (Docker):
+# MONGODB_URI=mongodb://admin:password@mongodb:27017/time-tracker?authSource=admin
+# MongoDB Atlas (Cloud):
+# MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/time-tracker?retryWrites=true&w=majority
+# 
+# To use Atlas, replace the connection string above with your Atlas connection string.
+# Get your connection string from: https://cloud.mongodb.com -> Database -> Connect -> Connect your application
+MONGODB_URI=mongodb://admin:password@mongodb:27017/time-tracker?authSource=admin
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-here
